[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hasa"
version = "0.1.0"
description = "History-Aware Sampling Algorithm for robust deep learning under label noise"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Selim"},
]
keywords = ["deep-learning", "robust-training", "label-noise", "sample-selection", "pytorch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=1.13",
]

[project.urls]
Homepage = "https://github.com/msc35/hasa-py"
Repository = "https://github.com/msc35/hasa-py"
Issues = "https://github.com/msc35/hasa-py/issues"
Documentation = "https://github.com/msc35/hasa-py#readme"

[project.optional-dependencies]
lightning = ["lightning>=2.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["hasa*"]

[tool.setuptools.package-data]
hasa = ["py.typed"]

[tool.ruff]
line-length = 99
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "ANN", "B", "SIM"]
ignore = ["ANN401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
